fix(ui): Apply overflow-x clip on the base section itself to not cause weird issue with the paddings etc

--- a/src/app/components.css
+++ b/src/app/components.css
@@ -38,7 +38,7 @@
   }
 
   .section-container {
-    @apply text-foreground relative mx-auto min-h-screen w-full px-6 py-24 lg:px-24 lg:py-32;
+    @apply text-foreground relative mx-auto min-h-screen w-full overflow-x-clip px-6 py-24 lg:px-24 lg:py-32;
   }
 
   .editorial-header {
